# sptam

./: CMakeLists.txt  README.md
configurationFiles/: euroc.yaml
launch/: euroc.launch
src/ros/: CMakeLists.txt  main.cpp  sptam_node.cpp  sptam_node.hpp
src/sptam/: BundleDriver.cpp  FeatureExtractorThread.cpp  FeatureExtractorThread.hpp  tracker_g2o.cpp
